--- a/speedportal/main/templates/main/userpopup.html
+++ b/speedportal/main/templates/main/userpopup.html
@@ -1,5 +1,9 @@
 <h5><img src=&quot;{{ user.pfp.url }}&quot; height=&quot;30&quot; width=&quot;30&quot;>{{ user.username }}</h5>
+{% if user.is_banned %}
+<p><b>Этот пользователь забанен</b></p>
+{% else %}
 <p>{{ user.points }} очков</p>
 {% if user.is_moderator %}
 <p style=&quot;color:green&quot;>Модератор</p>
+{% endif %}
 {% endif %}
