--- a/speedportal/main/templates/main/run.html
+++ b/speedportal/main/templates/main/run.html
@@ -11,6 +11,7 @@
 
 {% block content %}
 <p><img src="{{ run.game_category.game.banner.url }}" height=100 wigth=640></p>
+<p><a href="{% url 'main:leaderboard' run.game_category.game.slug run.game_category.category.slug %}">Назад к таблице лидеров</a></p>
 <h1>{{ run.game_category.game.name }}: {{ run.game_category.category.name }}</h1>
 <p>{{ run.game_category.extra_description }}</p>
 {% if not run.user.is_banned %}
